--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="page-wrapper">
-        <a href="login.html" class="arrow">
+        <a href="index.html" class="arrow">
             <img src="imagenes/arrow.png" alt="arrow">
         </a>
         <img src="imagenes/home.png" alt="home" class="home">
